<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/iv_title_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/big_event"
            android:visibility="gone"/>
        <RadioGroup
            android:id="@+id/tab_bar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"

            android:paddingBottom="@dimen/tab_padding_bottom"
            android:paddingTop="@dimen/tab_padding_top">

            <RadioButton
                android:id="@+id/rb_information"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/information"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/font_tab_size" />

            <RadioButton
                android:id="@+id/rb_charm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/tab_charm"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/font_tab_size" />
        </RadioGroup>


    </LinearLayout>
