<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    android:clipToPadding="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_heiht"
            android:background="@color/main_color"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_behavior="@string/title_view_behavior"
            app:contentInsetStart="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/big_event"
                    android:gravity="center"
                    android:text="@string/big_event"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <com.jssj.jiangye.widget.SelectionLayout
                    android:id="@+id/slOverall"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/send_book"
                    android:gravity="center"
                    android:text="@string/send"
                    android:layout_marginRight="11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:borderWidth="0dp"
        app:elevation="4dp"
        app:fabSize="auto"
        app:layout_anchor="@id/recycleview"
        app:layout_anchorGravity="bottom|end"
        app:layout_behavior="@string/fab_vertical_behavior"
        app:srcCompat="@mipmap/ic_launcher"/>



</android.support.design.widget.CoordinatorLayout>