<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <!-- 底层菜单 -->
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/alpha_05_black" />

        <RadioGroup
            android:id="@+id/tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/alpha_90_white"
            android:paddingBottom="@dimen/tab_padding_bottom"
            android:paddingTop="@dimen/tab_padding_top">

            <RadioButton
                android:id="@+id/rb_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="@dimen/tab_item_drawable_padding"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center_horizontal"
                android:text="@string/tab_home"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/font_tab_size" />

            <RadioButton
                android:id="@+id/rb_starts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="@dimen/tab_item_drawable_padding"
                android:drawableTop="@mipmap/ic_launcher"
                android:gravity="center_horizontal"
                android:text="@string/tab_starts"
                android:textColor="@color/tab_text_color"
                android:textSize="@dimen/font_tab_size" />


            <RelativeLayout
                android:id="@+id/rl_book"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawablePadding="@dimen/tab_item_drawable_padding"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_book"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/font_tab_size" />
                <ImageView
                    android:id="@+id/iv_book_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="20dp"
                    android:src="@mipmap/icon_new_message"
                    android:visibility="gone"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    android:drawablePadding="@dimen/tab_item_drawable_padding"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_action"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/font_tab_size" />

                <ImageView
                    android:id="@+id/iv_activity_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="20dp"
                    android:src="@mipmap/icon_new_message"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_new_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="20dp"
                    android:src="@mipmap/icon_new_message"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rb_mine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    android:drawablePadding="@dimen/tab_item_drawable_padding"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center_horizontal"
                    android:text="@string/tab_mine"
                    android:textColor="@color/tab_text_color"
                    android:visibility="visible"
                    android:textSize="@dimen/font_tab_size" />
            </RelativeLayout>
        </RadioGroup>
    </LinearLayout>
    </LinearLayout>

</FrameLayout>
