<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    android:clipToPadding="true">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_heiht"
            android:background="@color/main_color"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_behavior="@string/title_view_behavior"
            app:contentInsetStart="0dp"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="match_parent"
                          android:background="@color/main_color"
                          android:layout_height="45dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/tvtitle_left"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/big_event"
                        android:visibility="visible"/>
                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/big_event"
                        android:textStyle="bold"
                        android:textSize="@dimen/font_tab_size"
                        android:visibility="visible"/>
                    <TextView
                        android:id="@+id/tvtitle_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/big_event"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:visibility="visible"/>
                </LinearLayout>
                <View
                    android:background="@color/alpha_50_black"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:borderWidth="0dp"
        app:elevation="4dp"
        app:fabSize="auto"
        app:layout_anchor="@id/recycleview"
        app:layout_anchorGravity="bottom|end"
        app:layout_behavior="@string/fab_vertical_behavior"
        app:srcCompat="@mipmap/ic_launcher"/>

</android.support.design.widget.CoordinatorLayout>